# web-page-analyzer

./: .codeclimate.yml  .gitignore  Makefile  README.md  database.sql  pyproject.toml  pytest.ini
.github/workflows/: flake8_linter.yml  hexlet-check.yml  pytest.yml  pytest_with_postgres.yml
page_analyzer/: analyzer.py  app.py  checks.py  db.py  db_old.py  exceptions.py  url_checker.py  url_validator.py  urls.py
page_analyzer/db/: __init__.py  checks.py  connect.py  urls.py
page_analyzer/language/: __init__.py  en.py  ru.py
page_analyzer/model/: __init__.py  analyzer.py  checks.py  db.py  urls.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  show_url.html  show_urls.html
tests/: conftest.py  test_start_page.py  test_url_id_page.py  test_url_list_page.py
tests/fixtures/: gmail.html
