[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Flask web app that analyzes web pages for basic SEO suitability."
authors = ["Andrey <volk000@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]
repository = "https://github.com/Andrey-Volkovitskiy/python-project-83"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Topic :: Internet :: WWW/HTTP :: Site Management"
]

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.1"
psycopg2-binary = "^2.9.5"
validators = "^0.20.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
